--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ navigation:
     get-started/traffic:
         title: Traffic Inspection and Analysis
         position: 10
-    get-started/traffic:
+    get-started/api:
         title: API Composing
         position: 30
     user-guide:
