chore: fix the version of 2.2.0 release notes
Co-authored-by: Stoyan Stratev <stoyan.stratev@progress.com>

--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,8 +1,8 @@
 [
     {
-        "version": "2.2.0-insiders",
+        "version": "2.2.0",
         "title": "Fiddler Everywhere v2.2.0",
-        "date": "October 25, 2021",
+        "date": "October 26, 2021",
         "items": [
             {
                 "type": "New",
