chore: update whats new for 3.0 release
Update the What's new section for 3.0 release - add the new blog post and remove the one for 2.0 release.
Also, remove 2 incorrect spaces from the release notes

--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -8,7 +8,7 @@
                 "type": "New",
                 "entries": [
                     {
-                        "title": "HTTP/2 Support (currently in Beta, you need to enable it in Settings) "
+                        "title": "HTTP/2 Support (currently in Beta, you need to enable it in Settings)"
                     },
                     {
                         "title": "Inspection of WebSocket communication"
@@ -41,7 +41,7 @@
                         "title": "Added support for decoding of Bzip2 content encoding"
                     },
                     {
-                        "title": "Updated the application build dependencies to use .NET 6.0 and Electron 15.0. "
+                        "title": "Updated the application build dependencies to use .NET 6.0 and Electron 15.0"
                     }
                 ]
             },
