--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,5 +1,29 @@
 [
     {
+        "version": "3.1.1",
+        "title": "Fiddler Everywhere v3.1.1",
+        "date": "April 05, 2021",
+        "items": [
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Composer's unchecked headers are removed after execution of request"
+                    },
+                    {
+                        "title": "Right click in the Inspectors' tables adds the row to the current selection"
+                    },
+                    {
+                        "title": "Incorrect message is shown when password does not meet requirements"
+                    },
+                    {
+                        "title": "Export button in Rules does not respect selection"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "3.1.0",
         "title": "Fiddler Everywhere v3.1.0",
         "date": "March 17, 2021",
